--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
           <button class="all">View All Apartments</button>
         </div>  
       </section>
+      <p>test</p>
     </main>
   </body>
 </html>
