--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           </h2>
           <div class="cards">
             <div class="card">
-              <img src="/Second project/src/img/kitchen.jpg" alt="" />
+              <img src="/src/img/kitchen.jpg" alt="" />
               <div class="card-container">
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
                 <div class="card-info">
@@ -112,7 +112,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="/Second project/src/img/kitchen.jpg" alt="" />
+              <img src="/src/img/kitchen.jpg" alt="" />
               <div class="card-container">
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
                 <div class="card-info">
@@ -125,7 +125,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="/Second project/src/img/kitchen.jpg" alt="" />
+              <img src="/src/img/kitchen.jpg" alt="" />
               <div class="card-container">
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
                 <div class="card-info">
@@ -138,7 +138,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="/Second project/src/img/kitchen.jpg" alt="" />
+              <img src="/src/img/kitchen.jpg" alt="" />
               <div class="card-container">
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
                 <div class="card-info">
@@ -150,7 +150,7 @@
                 </div>
               </div>
             </div>  <div class="card">
-              <img src="/Second project/src/img/kitchen.jpg" alt="" />
+              <img src="/src/img/kitchen.jpg" alt="" />
               <div class="card-container">
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
                 <div class="card-info">
@@ -163,7 +163,7 @@
               </div>
           </div>
           <div class="card">
-            <img src="/Second project/src/img/kitchen.jpg" alt="" />
+            <img src="/src/img/kitchen.jpg" alt="" />
             <div class="card-container">
               <p>Lorem ipsum dolor sit amet consectetur.</p>
               <div class="card-info">
@@ -184,7 +184,34 @@
           <button class="all">View All Apartments</button>
         </div>  
       </section>
-      <p>test</p>
-    </main>
+      <section class="steps">
+        <div class="wrapper">
+          <h2>How It Work</h2>
+          <p class="steps-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <p class="steps-text mbtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, culpa dicta! <br> Libero, accusamus fugit</p>
+          <div class="steps-container">
+            <div class="stepblock" id="stepbl1">
+              <p class="step-num">01</p>
+              <h4><span>01</span>Find Your Location</h4>
+              <p class="step-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero debitis consequuntur voluptas est amet.</p>
+              <p class="stepinfolast" id="stepbrdr1">Find Location</p>
+            </div>
+            <div class="stepblock" id="stepbl2">
+              <p class="step-num">02</p>
+              <h4><span>02</span>Find Your Location</h4>
+              <p class="step-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero debitis consequuntur voluptas est amet.</p>
+              <p class="stepinfolast" id="stepbrdr2">Find Location</p>
+            </div>
+            <div class="stepblock" id="stepbl3">
+              <p class="step-num">03</p>
+              <h4><span>03</span>Find Your Location</h4>
+              <p class="step-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero debitis consequuntur voluptas est amet.</p>
+              <p class="stepinfolast" id="stepbrdr3">Find Location</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main> 
+    <script src="./src/js/index.js"></script>
   </body>
 </html>
