--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Document</title>
   </head>
 
-  <body>
+  <body> 
     <header>
       <nav>
         <input type="checkbox" id="checkbox-menu" />
@@ -211,7 +211,157 @@
           </div>
         </div>
       </section>
-    </main> 
+      <section class="services wrapper">
+        <h2>Services</h2>
+        <p>Lorem ipsum dolor sit amet consectetur.</p> 
+        <p>Lorem ipsum dolor sit amet.</p>
+        <div class="serv-container">
+          <div class="serv-img-container">
+            <img src="/src/img/apart1.jpg" alt="">
+          </div>
+          <div class="serv-text">
+            <h4>Renting</h4>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit maiores voluptates magnam assumenda mollitia deleniti necessitatibus tempore nemo ipsam totam nobis, facilis non unde sed?</p>
+            <h4>Renting</h4>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit maiores voluptates magnam assumenda mollitia deleniti necessitatibus tempore nemo ipsam totam nobis, facilis non unde sed?</p>
+            <h4>Renting</h4>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit maiores voluptates magnam assumenda mollitia deleniti necessitatibus tempore nemo ipsam totam nobis, facilis non unde sed?</p>
+          </div>
+        </div>
+      </section>
+      <section class="agents">
+        <div class="wrapper">
+          <h2>Meet Our Agents</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Fugit cum totam nemo?</p>
+        <div class="agent-cards">
+          <div class="agent-card">
+            <img src="/src/img/agent.jpg" alt="">
+            <div class="agent-info">
+              <p>Agent</p>
+              <div class="agent-block">
+                <p class="agent-name">Mr. Luke Skylwaker</p>
+                <div class="social">
+                  <a href="#"><i class="fab fa-twitter"></i></a>
+                  <a href="#"><i class="fab fa-facebook"></i></a>
+                  <a href="#"><i class="fab fa-instagram"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="agent-card">
+            <img src="/src/img/agent.jpg" alt="">
+            <div class="agent-info">
+              <p>Agent</p>
+              <div class="agent-block">
+                <p class="agent-name">Mr. Luke Skylwaker</p>
+                <div class="social">
+                  <a href="#"><i class="fab fa-twitter"></i></a>
+                  <a href="#"><i class="fab fa-facebook"></i></a>
+                  <a href="#"><i class="fab fa-instagram"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="agent-card">
+            <img src="/src/img/agent.jpg" alt="">
+            <div class="agent-info">
+              <p>Agent</p>
+              <div class="agent-block">
+                <p class="agent-name">Mr. Luke Skylwaker</p>
+                <div class="social">
+                  <a href="#"><i class="fab fa-twitter"></i></a>
+                  <a href="#"><i class="fab fa-facebook"></i></a>
+                  <a href="#"><i class="fab fa-instagram"></i></a>
+                </div>
+              </div> 
+            </div>
+          </div>    
+        </div>
+      </section>
+      <section class="add wrapper">
+        <div class="add-line">
+          <div class="line-amg">
+            <img src="/src/img/apart2.jpg" alt="">
+            <div class="location location-melbourn">
+              <i class="fas fa-map-marker-alt"></i>
+              Melborn, Australia
+            </div>
+          </div>
+          <div class="line-text">
+            <h3>Super Awesome Add</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor dicta animi vero fuga, vel, quia voluptatibus laborum facilis dolore quos quas voluptatum deserunt. Nisi vel sit sequi quaerat, quas quos aut animi minima consectetur dolor.</p>
+          </div>
+        </div>
+        <div class="add-line add-line-right">
+          <div class="line-text">
+            <h3>Super Awesome Add</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor dicta animi vero fuga, vel, quia voluptatibus laborum facilis dolore quos quas voluptatum deserunt. Nisi vel sit sequi quaerat, quas quos aut animi minima consectetur dolor.</p>
+          </div>
+          <div class="line-amg">
+            <img src="/src/img/apart2.jpg" alt="">
+            <div class="location location-australia">
+              <i class="fas fa-map-marker-alt"></i>
+              Melborn, Australia
+            </div>
+          </div>
+        </div>
+        <div class="add-line">
+          <div class="line-amg">
+            <img src="/src/img/apart2.jpg" alt="">
+          </div>
+          <div class="line-text">
+            <h3>Super Awesome Add</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor dicta animi vero fuga, vel, quia voluptatibus laborum facilis dolore quos quas voluptatum deserunt. Nisi vel sit sequi quaerat!.</p>
+            <div class="show-more">Show Me More</div>
+          </div>
+        </div>
+      </section>
+      <footer>
+        <div class="wrapper">
+          <div class="footer-block">
+            <div class="footer-logo">
+              <h3>luxestate</h3>
+              <h3>Explore Real Estate</h3>
+            </div>
+            <div class="footer-search">
+              <input type="text" placeholder="Subscribe To Our Newsletter">
+            </div>
+          </div>
+          <hr>
+          <div class="footer-links">
+            <div class="footer-links-logo">
+              <h4>luxestate</h4>
+            </div>
+          
+          <div class="footer-link">
+            <p>luxestate</p>
+            <a href="#">Agents</a>
+            <a href="#">Hunters</a>
+          </div>
+          <div class="footer-link">
+            <p>luxestate</p>
+            <a href="#">Agents</a>
+            <a href="#">Hunters</a>
+            <a href="#">Agents</a>
+            <a href="#">Hunters</a>
+          </div>
+          <div class="footer-link">
+            <p>luxestate</p>
+            <a href="#">Agents</a>
+            <a href="#">Hunters</a>
+          </div>
+          <div class="footer-link">
+            <p>luxestate</p>
+            <a href="#">Agents</a>
+            <a href="#">Hunters</a>
+            <a href="#">Agents</a>
+            
+          </div>
+        </div>
+        </div>
+      </footer>
+
     <script src="./src/js/index.js"></script>
   </body>
 </html>
