--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           </h2>
           <div class="cards">
             <div class="card">
-              <img src="/src/img/kitchen.jpg" alt="" />
+              <img src="./src/img/kitchen.jpg" alt="" />
               <div class="card-container">
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
                 <div class="card-info">
@@ -112,7 +112,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="/src/img/kitchen.jpg" alt="" />
+              <img src="./src/img/kitchen.jpg" alt="" />
               <div class="card-container">
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
                 <div class="card-info">
@@ -125,7 +125,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="/src/img/kitchen.jpg" alt="" />
+              <img src="./src/img/kitchen.jpg" alt="" />
               <div class="card-container">
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
                 <div class="card-info">
@@ -138,7 +138,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="/src/img/kitchen.jpg" alt="" />
+              <img src="./src/img/kitchen.jpg" alt="" />
               <div class="card-container">
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
                 <div class="card-info">
@@ -150,7 +150,7 @@
                 </div>
               </div>
             </div>  <div class="card">
-              <img src="/src/img/kitchen.jpg" alt="" />
+              <img src="./src/img/kitchen.jpg" alt="" />
               <div class="card-container">
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
                 <div class="card-info">
@@ -163,7 +163,7 @@
               </div>
           </div>
           <div class="card">
-            <img src="/src/img/kitchen.jpg" alt="" />
+            <img src="./src/img/kitchen.jpg" alt="" />
             <div class="card-container">
               <p>Lorem ipsum dolor sit amet consectetur.</p>
               <div class="card-info">
@@ -217,7 +217,7 @@
         <p>Lorem ipsum dolor sit amet.</p>
         <div class="serv-container">
           <div class="serv-img-container">
-            <img src="/src/img/apart1.jpg" alt="">
+            <img src="./src/img/apart1.jpg" alt="">
           </div>
           <div class="serv-text">
             <h4>Renting</h4>
@@ -236,7 +236,7 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Fugit cum totam nemo?</p>
         <div class="agent-cards">
           <div class="agent-card">
-            <img src="/src/img/agent.jpg" alt="">
+            <img src="./src/img/agent.jpg" alt="">
             <div class="agent-info">
               <p>Agent</p>
               <div class="agent-block">
@@ -250,7 +250,7 @@
             </div>
           </div>
           <div class="agent-card">
-            <img src="/src/img/agent.jpg" alt="">
+            <img src="./src/img/agent.jpg" alt="">
             <div class="agent-info">
               <p>Agent</p>
               <div class="agent-block">
@@ -264,7 +264,7 @@
             </div>
           </div>
           <div class="agent-card">
-            <img src="/src/img/agent.jpg" alt="">
+            <img src="./src/img/agent.jpg" alt="">
             <div class="agent-info">
               <p>Agent</p>
               <div class="agent-block">
@@ -282,7 +282,7 @@
       <section class="add wrapper">
         <div class="add-line">
           <div class="line-amg">
-            <img src="/src/img/apart2.jpg" alt="">
+            <img src="./src/img/apart2.jpg" alt="">
             <div class="location location-melbourn">
               <i class="fas fa-map-marker-alt"></i>
               Melborn, Australia
@@ -299,7 +299,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor dicta animi vero fuga, vel, quia voluptatibus laborum facilis dolore quos quas voluptatum deserunt. Nisi vel sit sequi quaerat, quas quos aut animi minima consectetur dolor.</p>
           </div>
           <div class="line-amg">
-            <img src="/src/img/apart2.jpg" alt="">
+            <img src="./src/img/apart2.jpg" alt="">
             <div class="location location-australia">
               <i class="fas fa-map-marker-alt"></i>
               Melborn, Australia
@@ -308,7 +308,7 @@
         </div>
         <div class="add-line">
           <div class="line-amg">
-            <img src="/src/img/apart2.jpg" alt="">
+            <img src="./src/img/apart2.jpg" alt="">
           </div>
           <div class="line-text">
             <h3>Super Awesome Add</h3>
